Time: 35 ms (43.97%) | Memory: 60 MB (17.52%) - LeetSync